# emerald

./: Makefile  README.md  pyproject.toml
src/: environ.py  errors.py  send.py
